Update 'y8hmusbci-java-springboot' component image to: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-97758eb04c.rei4.p3.openshiftapps.com/rhtap/rhtap-qe:25b49d547d2e0acf7956730ae09e2db366dbe49a@sha256:da78476c64fdccafaabe7db433af2e11713a25a1e61a12583f9ea4697b0df139

--- a/components/y8hmusbci-java-springboot/overlays/development/deployment-patch.yaml
+++ b/components/y8hmusbci-java-springboot/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: y8hmusbci-java-springboot
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-97758eb04c.rei4.p3.openshiftapps.com/rhtap/rhtap-qe:25b49d547d2e0acf7956730ae09e2db366dbe49a@sha256:da78476c64fdccafaabe7db433af2e11713a25a1e61a12583f9ea4697b0df139
+          name: container-image
